# Principles-of-Computer-Systems-Experiment

./: .gitignore  benchmark_results.csv  init_report.sh
Experiment1/report/: main.tex  makefile
Experiment1/report/code/: Optimization_1_ Reducing Loop Overhead.c  Optimization_2_Decreasing Function Call Overhead.c  Optimization_3_Eliminating Unnecessary Memory References.c  Optimization_4_ Enhancing Parallelism.c  baseline.c  compiler_opt.c  hello.c
Experiment1/report/config/: format.tex  listing.tex  packages.tex
Experiment1/report/content/: 00cover.tex  10environment.tex  11background.tex  12principle.tex  13process.tex  14result.tex  15conclusion.tex  20environment.tex  21background.tex  22principle.tex  23process.tex  24result.tex  25conclusion.tex  appendix2.tex
Experiment1/task1/code/: Makefile  manage_vm.sh  matmul.c  matmul_all.c  matmult_v2.c  matrix_multiplication.c  run.sh  run_bench.py
Experiment2/report/: main.tex
Experiment2/report/code/: analyze_algorithm_impact.py  analyze_associativity.py  analyze_matrix_size.py  analyze_replacement.py  cache_sim.py
Experiment2/report/config/: packages.tex
Experiment2/report/content/: 10target.tex  11environment.tex  12principle.tex  20process_cache_capacity.tex  21process_trace_generation.tex  22cache_simulator_implementation.tex  23micro_benchmark.tex  24process_associativity.tex  25process_replacement.tex  26process_matrix_algorithm.tex  26process_matrix_size.tex  27process_xiangshan_optional.tex  30conclusion.tex  31appendix.tex
Experiment2/report/data/: algorithm_comparison.csv  associativity_study.csv  capacity_study.csv  matrix_size_study.csv  replacement_study.csv
Experiment3/report/: report.tex
Experiment3/report/bib/: bib.tex
Experiment3/report/code/: qemu_build_copy_launch.sh  qemu_run_sm4_bench.sh  run_sm4_bench.py  sm4  sm4_cbc_decrypt_parallel.c  sm4_cbc_decrypt_table_parallel.c  sm4_multibuffer_bitslice.c  sm4_multibuffer_bitslice_rv64.c  sm4_multibuffer_bitslice_x86.c  sm4_multibuffer_pthread.c  sm4_multibuffer_simd.c  sm4_multibuffer_table_pthread.c  sm4_original.c  sm4_portable.h  sm4_single_stream_original.c  sm4_single_stream_riscv_zksed.c  sm4_single_stream_table.c  sm4_table.c
Experiment3/report/config/: listing.tex  packages.tex
Experiment3/report/content/: 00target.tex  01environment.tex  02principle.tex  03test.tex  10optimization.tex  (+4 more)
Experiment4/experiment_int/: exp_int.txt  plot_sm4_analysis.py
Experiment4/report/: makefile  report.tex
work/openhitls/testcode/demo/: CMakeLists.txt  Makefile  analyze.py  analyze2.py  benchmark_average_summary.txt  hash.c  run_benchmark.sh  sm4_benchmark.c  sm4_common.h  sm4_default_loop.c  sm4_reduced_dep.c  sm4_results.csv  sm4_unrolled.c  sm4_xbox.c  sm4_xbox_merged.c  sm4_xbox_zbb.c  sm4_zbb.c  sm4cbc.c  sm4cbc_origin.c
work/openhitls/testcode/demo/results_20260608_164621/: sm4_results.csv  sm4_results.txt
work/openhitls/testcode/demo/results_20260608_172515/: sm4_results.csv  sm4_results.txt
work/openhitls/testcode/demo/results_20260608_172547/: sm4_results.csv  sm4_results.txt
work/openhitls/testcode/demo/results_20260608_172618/: sm4_results.csv  sm4_results.txt
(+24 files in other folders)
